<resources>
    <string name="app_name">To-do list App</string>
    <string name="add">Add</string>
    <string name="add_todo_title"><b>Add Todo</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_list"><b>To-do List</b></string>
    <string name="work_todo">Work to do</string>
    <string name="update">Update</string>
    <string name="empty_list_text"><b>Your To-do List is Empty for now.</b></string>

    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

</resources>